[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptui"
authors = [
  { name="Xueao Chao", email="chaoxueao@gmail.com" },
]
description = "A GPT conversational TUI tool that runs within the terminal."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Terminals',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: OS Independent',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
]
keywords = ["TUI", "terminal", "GPT", "CLI", "textual user interface"]
dependencies = [
    'agere>=0.1.1,<1',
    'ai-care>=0.1.2,<1',
    'aiofiles>=23.1.0,<24',
    'beautifulsoup4>=4.12.2,<5',
    'blinker>=1.6.2,<2',
    'chardet>=5.1.0,<6',
    'geocoder>=1.38.1,<2',
    'httpx>=0.24.1,<1',
    'lxml>=4.9.3,<5',
    # 'open-interpreter==0.1.4',
    'openai>=1.2.0,<2',
    'playsound>=1.3.0,<2',
    'Pygments>=2.15.1,<3',
    'pyperclip>=1.8.2,<2',
    'python-dotenv>=1.0.0,<2',
    'PyYAML>=6.0.1,<7',
    'qdrant-client>=1.4.0,<2',
    'rich>=13.7.0,<14',
    'semantic-kernel>=0.4.0.dev0,<1',
    'textual>=0.37.1,<1',
    'tiktoken>=0.4.0,<1',
    'unstructured>=0.10.18,<1'
]

[project.urls]
"Homepage" = "https://github.com/happyapplehorse/gptui"
"Bug Tracker" = "https://github.com/happyapplehorse/gptui/issues"

[project.entry-points."console_scripts"]
gptui = "gptui.__main__:gptui"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = "src"

[tool.setuptools.dynamic]
version = {attr = "gptui.__version__"}
